cmake_minimum_required(VERSION 3.19)
project(競技プログラミング)
set(CMAKE_CXX_STANDARD 17)

# Contest abc 206
#add_executable(206_a 206/a.cpp)
#add_executable(206_b 206/b.cpp)
#add_executable(206_c 206/c.cpp)
#add_executable(206_d 206/d.cpp)
#add_executable(206_e 206/e.cpp)
#add_executable(206_f 206/f.cpp)
#
#
## Contest abc 207
#add_executable(207_a 207/a.cpp)
#add_executable(207_b 207/b.cpp)
#add_executable(207_c 207/c.cpp)
#add_executable(207_d 207/d.cpp)
#add_executable(207_e 207/e.cpp)
#add_executable(207_f 207/f.cpp)
#
## Contest abc 205
#add_executable(205_a 205/a.cpp)
#add_executable(205_b 205/b.cpp)
#add_executable(205_c 205/c.cpp)
#add_executable(205_d 205/d.cpp)
#add_executable(205_e 205/e.cpp)
#add_executable(205_f 205/f.cpp)

# Contest abc 204
add_executable(204_a 204/a.cpp)
add_executable(204_b 204/b.cpp)
add_executable(204_c 204/c.cpp)
add_executable(204_d 204/d.cpp)
add_executable(204_e 204/e.cpp)
add_executable(204_f 204/f.cpp)

## Contest abc 203
#add_executable(203_a 203/a.cpp)
#add_executable(203_b 203/b.cpp)
#add_executable(203_c 203/c.cpp)
#add_executable(203_d 203/d.cpp)
#add_executable(203_e 203/e.cpp)
#add_executable(203_f 203/f.cpp)
#
## Contest abc 202
#add_executable(202_a 202/a.cpp)
#add_executable(202_b 202/b.cpp)
#add_executable(202_c 202/c.cpp)
#add_executable(202_d 202/d.cpp)
#add_executable(202_e 202/e.cpp)
#add_executable(202_f 202/f.cpp)

# Contest abc 208
add_executable(208_a 208/a.cpp)
add_executable(208_b 208/b.cpp)
add_executable(208_c 208/c.cpp)
add_executable(208_d 208/d.cpp)
add_executable(208_e 208/e.cpp)
add_executable(208_f 208/f.cpp)

#abs atcoder beginners selection
add_executable(practiceA abs/practiceA.cpp)
add_executable(product abs/product.cpp)
add_executable(placing_marbles abs/placing_marbles.cpp)
add_executable(shift_only abs/shift_only.cpp)
add_executable(coins abs/coins.cpp)


# Contest abc 210
add_executable(210_a 210/a.cpp)
add_executable(210_b 210/b.cpp)
add_executable(210_c 210/c.cpp)
add_executable(210_d 210/d.cpp)
add_executable(210_e 210/e.cpp)
add_executable(210_f 210/f.cpp)
