
# Contest arc 137
add_executable(137_a 137/a.cpp)
add_executable(137_b 137/b.cpp)
add_executable(137_c 137/c.cpp)
add_executable(137_d 137/d.cpp)
add_executable(137_e 137/e.cpp)
add_executable(137_f 137/f.cpp)
add_executable(137_g 137/g.cpp)
add_executable(137_h 137/h.cpp)

# Contest arc 138
add_executable(138_a 138/a.cpp)
add_executable(138_b 138/b.cpp)
add_executable(138_c 138/c.cpp)
add_executable(138_d 138/d.cpp)
add_executable(138_e 138/e.cpp)
add_executable(138_f 138/f.cpp)
add_executable(138_g 138/g.cpp)
add_executable(138_h 138/h.cpp)
